Refactor test and add new test cases